[gd_scene load_steps=11 format=3 uid="uid://dccayarg3cuox"]

[ext_resource type="Script" path="res://Scenes/UI/Main.gd" id="1_n8fwi"]
[ext_resource type="Texture2D" uid="uid://bhy3o2crho8dx" path="res://Assets/Images/money.png" id="1_p350n"]
[ext_resource type="Texture2D" uid="uid://bjifunpm1nc0a" path="res://Assets/Images/employee.png" id="2_wr0tv"]
[ext_resource type="Texture2D" uid="uid://cle4f3hk2li15" path="res://Assets/Images/investors.png" id="3_rfs0g"]
[ext_resource type="Texture2D" uid="uid://qeitwj6hkjta" path="res://Assets/Images/world.png" id="4_16ngm"]
[ext_resource type="Texture2D" uid="uid://dglevdajwycy7" path="res://Assets/Images/accept.png" id="6_377kp"]
[ext_resource type="Texture2D" uid="uid://bwcw46gvmb8o" path="res://Assets/Images/decline.png" id="7_baimt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8oce"]
bg_color = Color(0.372549, 0.698039, 0.0745098, 0.517647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rai28"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxk6q"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Playspace" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_n8fwi")

[node name="GridContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(769, 1024)
offset_right = 769.0
offset_bottom = 1280.0
size_flags_stretch_ratio = 0.0
focus_neighbor_top = NodePath("Progress/MoneyControl/Money/ProgressBar")
focus_neighbor_bottom = NodePath("Buttons/Decline")

[node name="Progress" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="MoneyControl" type="BoxContainer" parent="GridContainer/Progress"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Money" type="TextureRect" parent="GridContainer/Progress/MoneyControl"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_p350n")
expand_mode = 1
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="GridContainer/Progress/MoneyControl/Money"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_n8oce")
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="EmployeeControl" type="BoxContainer" parent="GridContainer/Progress"]
custom_minimum_size = Vector2(162, 110)
layout_mode = 2
size_flags_horizontal = 3
auto_translate = false
localize_numeral_system = false

[node name="Employee" type="TextureRect" parent="GridContainer/Progress/EmployeeControl"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_wr0tv")
expand_mode = 1
stretch_mode = 5

[node name="ProgressBar2" type="ProgressBar" parent="GridContainer/Progress/EmployeeControl/Employee"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_n8oce")
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="InvestorsControl" type="BoxContainer" parent="GridContainer/Progress"]
custom_minimum_size = Vector2(162, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="Investors" type="TextureRect" parent="GridContainer/Progress/InvestorsControl"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_rfs0g")
expand_mode = 1
stretch_mode = 5

[node name="ProgressBar3" type="ProgressBar" parent="GridContainer/Progress/InvestorsControl/Investors"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_n8oce")
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="WorldControl" type="BoxContainer" parent="GridContainer/Progress"]
custom_minimum_size = Vector2(162, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="World" type="TextureRect" parent="GridContainer/Progress/WorldControl"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_16ngm")
expand_mode = 1
stretch_mode = 5

[node name="ProgressBar4" type="ProgressBar" parent="GridContainer/Progress/WorldControl/World"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_n8oce")
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="CardControl" type="CenterContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.84
focus_neighbor_top = NodePath("../Progress")
focus_neighbor_bottom = NodePath("../Buttons")
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 2

[node name="Accept" type="Button" parent="GridContainer/Buttons"]
custom_minimum_size = Vector2(324, 115)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_rai28")
icon = ExtResource("6_377kp")
icon_alignment = 1
expand_icon = true

[node name="Decline" type="Button" parent="GridContainer/Buttons"]
custom_minimum_size = Vector2(324, 115)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_xxk6q")
icon = ExtResource("7_baimt")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="GridContainer/Buttons/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="GridContainer/Buttons/Decline" to="." method="_on_decline_pressed"]
